# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
    "haskell_library",
    "haskell_binary",
    "haskell_repl",
)

STACK_DEPS = ["array", "base", "text", "containers",
        "parallel", "extra", "directory", "unix", "random",
        "attoparsec", "mtl"]

DEPS = ["@stackage//:{}".format(i) for i in STACK_DEPS]

EXTENSIONS = ["-XOverloadedStrings", "-XTupleSections", "-XMultiWayIf", "-XLambdaCase"]

haskell_library(
    name = "Commons",
    srcs = [":Commons.hs", ":Algorithms.hs"],
    deps = DEPS,
    ghcopts = EXTENSIONS,
)

haskell_repl(
    name = "hie-bios",
    collect_data = False,
    deps = DEPS + [":Commons"],
)

haskell_binary(
    name = "newday",
    srcs = [":Scaffolding.hs"],
    deps = DEPS,
    data = ["//deps:DayTemplate.hs"],
    ghcopts = EXTENSIONS,
)

DAYS = 16

[haskell_binary(
    name = "d{}".format(day + 1),
    srcs = ["Day{}.hs".format(day + 1)],
    deps = DEPS + [":Commons"],
    ghcopts = EXTENSIONS,
    data = [
        "//:inputs/{}/test.txt".format(day + 1),
        "//:inputs/{}/input.txt".format(day + 1),
    ],
) for day in range(DAYS)]
